# Sem3Labs

./: .gitignore
lab1/: CMakeLists.txt  main.cpp  test.csv  test.htm
lab1/include/: linkedList.hpp  sort.hpp
lab1/include/sequence/: dynamicArraySequence.hpp  linkedListSequence.hpp  sequence.hpp
lab1/src/: main.cpp  tests.cpp
lab1/tests/: TestHelper.hpp  sortTest.hpp
lab1/tests/sequence/: dynamicArraySequenceTest.hpp  linkedListSequenceTest.hpp  sequenceTest.hpp
lab2/: .clang-format  CMakeLists.txt  compile_commands.json  graph.htm  startValgrind
lab2/include/: TestIndexing.hpp  binTree.hpp  dynamicArray.hpp  graph.hpp  iDictionary.hpp  icollection.hpp  indexing.hpp  linkedList.hpp  nullable.hpp  priorityQueue.hpp  set.hpp  sparseVector.hpp  speedTest.hpp  testSpeed.hpp  tree.hpp  virtualFS.hpp
lab2/include/dictionary/: binTreeDictEntry.hpp  dictionary.hpp  iDictionary.hpp  indexing.hpp
lab2/include/sequence/: dynamicArraySequence.hpp  sequence.hpp
lab2/src/: speedTestMain.cpp  tests.cpp  vfsmain.cpp  virtualFS.cpp
lab2/tests/: TestHelper.hpp  test_binTree.cpp  test_binTree.hpp  test_dictonary.cpp  test_dictonary.hpp  test_indexing.cpp  test_indexing.hpp  test_nullable.cpp  test_nullable.hpp  test_set.cpp  test_set.hpp  test_sparseVector.cpp  test_sparseVector.hpp  test_tree.cpp  test_tree.hpp
lab2/tests/sequence/: dynamicArraySequenceTest.cpp  linkedListSequenceTest.cpp
lab3/: CMakeLists.txt  graph.hpp  test_graph.cpp
